Fixed buttons being hidden behind scrollbar

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0); /* optional overlay */
@@ -180,7 +181,7 @@ body {
 
 .project-card img {
     width: 100%;
-    height: 420px;
+    height: 390px;
     object-fit: cover;
     display: block;
     transition: transform 0.6s ease;
@@ -284,12 +285,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 20;
+    z-index: 30;
     transition: 0.3s ease;
 }
 
-.scroll-btn.left  { left: 0; }
-.scroll-btn.right { right: 0; }
+.scroll-btn.left  { left: 1.1rem; }
+.scroll-btn.right { right: 1.1rem; }
+
 
 .scroll-btn:hover {
     background: #7f5af0;
@@ -342,6 +344,7 @@ body {
     content: " ▾";
     font-size: 0.8rem;
     margin-left: 4px;
+    
 }
 
 /* Contact Section */
